# matrix-python-sdk

./: .env.local  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  fix_line_endings  mkdocs.yml  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: build-wheels.yml  ci.yml  publish.yml  release.yml
docs/: api.md  bulk.md  config.md  contributing.md  index.md  install.md  reference.md  usage.md
examples/: bulk_register_example.py  bulk_register_example.sh  example_search.sh  example_search_json.sh  import_docling_mcp.py  import_docling_mcp.sh  install_from_manifest.py  install_from_manifest.sh  install_inline_hello.py  install_inline_hello.sh  installer_example.py  installer_example.sh  route_probe.py  route_probe.sh  run.sh  sdk_e2e_install_run_demo.sh  search_example.py  search_example.sh  simple_example.sh  top5_search.py  top5_search.sh  watsonx_e2e_install_run_demo.sh  watsonx_e2e_install_run_demo_do.sh
matrix_sdk/: __init__.py  archivefetch.py  cache.py  client.py  gitfetch.py  installer.py  manifest.py  python_builder.py  runtime.py  schemas.py  tls.py  types.py
matrix_sdk/bulk/: __init__.py  backoff.py  bulk_registrar.py  cli.py  discovery.py  gateway.py  gateway_client.py  models.py  probe.py  schemas.py  utils.py
matrix_sdk/examples/: bulk_register_example.py  import_docling_mcp.py
matrix_sdk/installer/: __init__.py  core.py  envs.py  files.py  find_potential_servers.py  runner_discovery.py  runner_schema.py  (+1 more)
scripts/: build_wheels.ps1  build_wheels.sh
tests/: conftest.py  env_compare.py  test_client_live.py  test_installer.py
