[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matrix-python-sdk"
version = "0.1.0"
description = "Python SDK for Matrix Hub — catalog & installer for agents, tools, and MCP servers."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Apache-2.0" }
authors = [
  { name = "agent-matrix", email = "dev@agent-matrix.example" }
]

dependencies = [
  "httpx>=0.28,<0.29",
  "pydantic>=2.0,<3.0",
  "python-dotenv>=1.1,<2.0",
]

[project.urls]
Homepage = "https://github.com/agent-matrix/matrix-hub-sdk"
Issues = "https://github.com/agent-matrix/matrix-hub-sdk/issues"

[tool.setuptools]
packages = ["matrix_sdk"]
package-dir = {"" = "."} # Look for packages in the current directory

[tool.ruff]
line-length = 100
target-version = "py311"
